move threejs & jquery to online

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	
 	<link href="/css/scenevr.css" rel="stylesheet">
 	
-	<script src="/js/three.js"></script>
-	<script src="/js/jquery.js"></script>
+	<script src="http://kustomzone.github.io/kzone/js/three.js"></script>
+	<script src="http://kustomzone.github.io/kzone/js/jquery.js"></script>
 	<script src="/js/stats.js"></script>
 	<script src="/js/pointer-lock-controls.js"></script>
 	<script src="/js/html2canvas.js"></script>
