move html2canvas and stats to online

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 	
 	<link href="/css/scenevr.css" rel="stylesheet">
 	
+	<!-- hardcoded for testing -->
 	<script src="http://kustomzone.github.io/kzone/js/three.js"></script>
 	<script src="http://kustomzone.github.io/kzone/js/jquery.js"></script>
-	<script src="/js/stats.js"></script>
+	<script src="http://kustomzone.github.io/kzone/js/stats.js"></script>
+	<script src="http://kustomzone.github.io/kzone/js/html2canvas.js"></script>
+	
 	<script src="/js/pointer-lock-controls.js"></script>
-	<script src="/js/html2canvas.js"></script>
 	<script src="/js/three-vrrenderer.js"></script>
 	<script src="/js/obj-loader.js"></script>
 	<script src="/js/bundle.js"></script>
